fix: fix method showPopularFilms in class FilmServiceGeneral